fixed margin on small screen

--- a/src/screens/Home/home.css
+++ b/src/screens/Home/home.css
@@ -30,7 +30,7 @@
         display: flex;
         align-items: center;
         right: 1.6rem;
-        top: 10%;
+        top: 15%;
         z-index: 5;
     }
 }
